# mc_project

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dprint.json
client/: Cargo.toml
client/src/: app.rs  error.rs  main.rs  tui.rs  ui.rs  utils.rs
common/: Cargo.toml
common/src/: instructions.rs  lib.rs  message.rs  response.rs
docs/: mc_instruc.txt
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/src/: command.rs  error.rs  handle_connection.rs  log.rs  main.rs  mc_server.rs  process.rs  utils.rs
server/tests/: integration_test.rs
