[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = [ "derive" ]}
bincode = "1.3.3"

common = { path = "../common/" }
clap = { version = "4.5.4", features = ["derive"] }
