[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1"
serde = { version = "1", features = [ "derive" ] }
bincode = "1.3.3"
tokio = { version = "1.37.0", features = ["full"] }

common = { path = "../common/" }
